# Metallum

intro-data-minning-Luis8885nm/: CONTRIBUTING.md  ENTREGAS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
intro-data-minning-Luis8885nm/configs/: base.yaml
intro-data-minning-Luis8885nm/configs/teams/: team01.yaml  team02.yaml  team03.yaml
intro-data-minning-Luis8885nm/docs/: checkpoints.md  rubrica.md  syllabus.md
intro-data-minning-Luis8885nm/notebooks/: 00_intro.ipynb  01_kdd.ipynb  02_etl.ipynb  03_models.ipynb
intro-data-minning-Luis8885nm/src/md_lakehouse/: __init__.py  __main__.py  cli.py
intro-data-minning-Luis8885nm/src/md_lakehouse/common/: config.py  hashing.py  io.py  spark.py
intro-data-minning-Luis8885nm/src/md_lakehouse/evaluation/: metrics.py  reports.py
intro-data-minning-Luis8885nm/src/md_lakehouse/features/: build_features.py
intro-data-minning-Luis8885nm/src/md_lakehouse/generator/: __init__.py  generate.py  logic.py  schemas.py
intro-data-minning-Luis8885nm/src/md_lakehouse/models/: churn.py  ltv.py  segmentation.py
intro-data-minning-Luis8885nm/src/md_lakehouse/pipelines/: bronze_to_silver.py  quality.py  silver_to_gold.py
